--- a/common.blocks/quiz/__content/quiz__content.css
+++ b/common.blocks/quiz/__content/quiz__content.css
@@ -4,3 +4,14 @@
     margin: 10px;
     padding: 10px;
 }
+/*
+.quiz__accept
+{
+    margin-right: 12px;
+    margin-left: 500px;
+}
+
+.quiz__accept .quiz__decline
+{
+    margin-right: 12px;
+}*/
