--- a/common.blocks/quiz/quiz.css
+++ b/common.blocks/quiz/quiz.css
@@ -1,4 +1,7 @@
 .quiz
 {
-	border: 1px solid black;
+	max-width: 760px;
+    margin: 48px 0 16px 10px;
+    padding: 0 10px;
+    background: rgba(0,0,0,.1);
 }
