--- a/common.blocks/quiz/quiz.css
+++ b/common.blocks/quiz/quiz.css
@@ -1,13 +1,38 @@
 .quiz {
-	max-width: 760px;
-    padding: 12px;
-    background: rgba(0,0,0,.1);
+    position: relative;
+
+    display: none;
+
+    width: 100%;
+
+    border: 1px solid rgba(27,31,35,.075);
+    border-radius: 3px !important;
+    background: url(quiz.svg);
+}
+
+.quiz__inner {
+    width: 520px;
+    margin: 0 auto;
+
+    text-align: center;
+}
+
+.quiz__table {
+    display: table-cell;
+
+    height: 192px;
+
+    vertical-align: middle;
+}
+
+.quiz_visible {
+    display: block;
 }
 
 .quiz__accept.quiz__accept {
     margin-right: 12px;
 }
 
-.quiz__text {
-    margin-bottom: 12px;
+.quiz__title {
+    margin: 0 0 20px;
 }
